# COW

./: pyproject.toml  requirements.txt
src/: csv2qb.py  csv2qber-schema.py  csvw_tool.py
src/converter/: csvw.py  qber.py
src/converter/util/: __init__.py  namespaces.py
